Fix word wrap
Previously all spaces were encoded to &nbsp; now every other space is encoded
to &nbsp;.
Fixes #18

--- a/public/chatPage.scss
+++ b/public/chatPage.scss
@@ -96,7 +96,6 @@ textarea.chat
    border: 0;
    border-bottom: 1px solid $panelColor;
    table-layout: fixed;
-   word-break: break-word;
 }
 
 #messages table td.timestamp
@@ -119,6 +118,8 @@ textarea.chat
 #messages table td.content
 {
    width: 100%;
+   word-break: normal;
+   word-wrap: break-word;
 }
 
 .notification td
